--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -104,6 +104,10 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+      </dependentAssembly>
     </assemblyBinding>
     <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
     <legacyHMACWarning enabled="0" />
