--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -643,6 +643,7 @@
     <Content Include="Views\CompanyPrepago\RecargaMasiva.cshtml" />
     <Content Include="Views\CompanyPrepago\Recargas.cshtml" />
     <Content Include="Views\CompanyPrepago\Ordenes.cshtml" />
+    <Content Include="Views\CompanyPrepago\FilterBeneficiariosRecargas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
