--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -639,11 +639,12 @@
     <Content Include="Views\Municipio\FilterMunicipio.cshtml" />
     <Content Include="Views\Parroquia\FilterParroquia.cshtml" />
     <Content Include="Views\Urbanizacion\FilterUrbanizacion.cshtml" />
-    <Content Include="Views\CompanyPrepago\RecargaIndividual.cshtml" />
     <Content Include="Views\CompanyPrepago\RecargaMasiva.cshtml" />
     <Content Include="Views\CompanyPrepago\Recargas.cshtml" />
     <Content Include="Views\CompanyPrepago\Ordenes.cshtml" />
     <Content Include="Views\CompanyPrepago\FilterBeneficiariosRecargas.cshtml" />
+    <Content Include="Views\CompanyPrepago\DetalleOrden.cshtml" />
+    <Content Include="Views\CompanyPrepago\ResultadoOrden.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
