--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -43,6 +43,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper">
@@ -467,7 +469,6 @@
       <DependentUpon>SumaLealtad.edmx</DependentUpon>
       <LastGenOutput>SumaLealtad.cs</LastGenOutput>
     </Content>
-    <None Include="Properties\PublishProfiles\Suma.pubxml" />
     <None Include="Properties\PublishProfiles\SumaLealtad.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
