--- a/SumaPlazas.Dispositivos.Impresora/SumaPlazas.Dispositivos.Impresora.csproj
+++ b/SumaPlazas.Dispositivos.Impresora/SumaPlazas.Dispositivos.Impresora.csproj
@@ -64,7 +64,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>3B91844E561B3E80B6A7DE56F2685CBEE5587379</ManifestCertificateThumbprint>
