Generacion de Reportes - Construccion

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -647,6 +647,10 @@
     <Content Include="Views\CompanyPrepago\DetalleOrden.cshtml" />
     <Content Include="Views\CompanyPrepago\ResultadoOrden.cshtml" />
     <Content Include="Views\CompanyPrepago\ConfirmacionRecargas.cshtml" />
+    <Content Include="Views\CompanyPrepago\R_ConsumosClientes.cshtml" />
+    <Content Include="Views\CompanyPrepago\R_ConsumoGeneral.cshtml" />
+    <Content Include="Views\CompanyPrepago\R_RecargasClientes.cshtml" />
+    <Content Include="Views\CompanyPrepago\R_RecargasGeneral.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
