--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -709,6 +709,12 @@
     <Content Include="Views\ClientePrepago\SuspenderTarjeta.cshtml" />
     <Content Include="Views\ClientePrepago\ReactivarTarjeta.cshtml" />
     <Content Include="Views\ClientePrepago\BloquearTarjeta.cshtml" />
+    <Content Include="Views\ClientePrepago\SilverlightImpresora.cshtml" />
+    <Content Include="Views\ClientePrepago\ImpresoraImprimirTarjeta.cshtml" />
+    <Content Include="Views\ClientePrepago\DetalleOrden.cshtml" />
+    <Content Include="Views\ClientePrepago\CreateOrdenRecarga.cshtml" />
+    <Content Include="Views\ClientePrepago\CargarArchivoRecarga.cshtml" />
+    <Content Include="Views\ClientePrepago\CreateOrdenRecargaArchivo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
