--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -710,6 +710,10 @@
     <Content Include="Views\ClientePrepago\SuspenderTarjeta.cshtml" />
     <Content Include="Views\ClientePrepago\ReactivarTarjeta.cshtml" />
     <Content Include="Views\ClientePrepago\BloquearTarjeta.cshtml" />
+    <Content Include="Views\Reporte\R_ConsumoCliente.cshtml" />
+    <Content Include="Views\Reporte\R_ConsumoGeneral.cshtml" />
+    <Content Include="Views\Reporte\R_RecargaCliente.cshtml" />
+    <Content Include="Views\Reporte\R_RecargaGeneral.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
