--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -25,11 +25,12 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />
+    <!--<add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />-->
+    <add key="WSCARDS" value="http://172.20.1.24/CardsREST/DESA/ServiceCards.svc/" />
     <add key="WSWEB" value="http://172.20.1.18/PlazasREST/ServiceREST.svc/" />
     <add key="PASSKEY" value="plazas" />
-    <add key="PATHPICTURE" value="~/Picture/@filename@.jpg" />
     <!--<add key="PATHPICTURE" value="~/Pictures/" />-->
+    <add key="PATHPICTURE" value="~/Picture/@filename@.jpg" />
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
