Recompilación despues de update VS2012.5

--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -768,6 +768,7 @@
     <Content Include="Views\FueraLineaPrepago\Table.cshtml" />
     <Content Include="Views\FueraLineaPrepago\AddNew.cshtml" />
     <Content Include="Views\FueraLineaPrepago\GenericView.cshtml" />
+    <Content Include="Views\OrdenRecargaPrepago\GenericView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Picture\" />
