--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -25,8 +25,10 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />-->
-    <!--<add key="WSWEB" value="http://172.20.1.18/PlazasREST/ServiceREST.svc/" />-->
+    <!--<add key="WSCARDS" value="http://172.20.1.18/CardsREST/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.18/PlazasREST/ServiceREST.svc/" />-->
+    <!--<add key="WSCARDS" value="http://172.20.1.24/CardsREST/QA/ServiceCards.svc/" />
+    <add key="WSWEB" value="http://172.20.1.24/PlazasREST/QA/ServiceREST.svc/" />-->
     <add key="WSCARDS" value="http://172.20.1.24/CardsREST/DESA/ServiceCards.svc/" />
     <add key="WSWEB" value="http://172.20.1.24/PlazasREST/DESA/ServiceREST.svc/" />
     <add key="PASSKEY" value="plazas" />
