--- a/SumaPlazas.Dispositivos.Impresora/SumaPlazas.Dispositivos.Impresora.csproj
+++ b/SumaPlazas.Dispositivos.Impresora/SumaPlazas.Dispositivos.Impresora.csproj
@@ -64,10 +64,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>false</SignManifests>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>3B91844E561B3E80B6A7DE56F2685CBEE5587379</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>E0144222F924E65B8D6F090A0CF955F4F0D967A9</ManifestCertificateThumbprint>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp, Version=5.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
