--- a/Suma2Lealtad/Web.config
+++ b/Suma2Lealtad/Web.config
@@ -64,6 +64,10 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+
+    <!--para ver los errores en los clientes-->
+      <customErrors mode="Off"/>
+
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
