--- a/SumaPlazas.Dispositivos.PinPad/SumaPlazas.Dispositivos.PinPad.csproj
+++ b/SumaPlazas.Dispositivos.PinPad/SumaPlazas.Dispositivos.PinPad.csproj
@@ -64,10 +64,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>false</SignManifests>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>E0144222F924E65B8D6F090A0CF955F4F0D967A9</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>C4A5D60B5859725F678A133547F22D617F6304F2</ManifestCertificateThumbprint>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp, Version=5.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
