--- a/Suma2Lealtad/Suma2Lealtad.csproj
+++ b/Suma2Lealtad/Suma2Lealtad.csproj
@@ -509,6 +509,7 @@
     <Content Include="App_Data\Plantilla.xls" />
     <Content Include="App_Browsers\qt.browser" />
     <None Include="Properties\PublishProfiles\SumaLealtad.pubxml" />
+    <None Include="Properties\PublishProfiles\SumaLealtadArturo.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
@@ -525,6 +526,12 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\npm.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\css\bootstrap-dialog.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\css\bootstrap-dialog.min.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\js\bootstrap-dialog.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\js\bootstrap-dialog.min.js" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\prettify\prettify.css" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\prettify\run_prettify.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -740,6 +747,7 @@
     <Content Include="Views\Reporte\FilterReporteTransacciones.cshtml" />
     <Content Include="Views\Reporte\ReporteTransacciones.cshtml" />
     <Content Include="Views\Reporte\ReporteTransaccionesPDF.cshtml" />
+    <Content Include="Scripts\PruebaBS3Dialog\assets\bootstrap-dialog\less\bootstrap-dialog.less" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Picture\" />
