Validacion de Cliente sin beneficiario activo con tarjeta activa para crear orden y crear orden desde archivo

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Carga Masiva POS\packages.config" />
+  <repository path="..\Carga Masiva Suma\packages.config" />
   <repository path="..\Suma2Lealtad\packages.config" />
 </repositories>
